Closed
Bug 1884022
Opened 2 years ago
Closed 2 years ago
nsWindow.mm:113:30: error: method parameter type 'NSSet *' does not match super class method parameter type 'NSSet<UITouch *> *' [-Werror,-Wsuper-class-method-mismatch]
Categories
(Core :: Widget: Cocoa, defect)
Tracking
()
RESOLVED
FIXED
125 Branch
| Tracking | Status | |
|---|---|---|
| firefox125 | --- | fixed |
People
(Reporter: glandium, Assigned: glandium)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
When building with --enable-project=mobile/ios --enable-warnings-as-errors:
0:04.56 /tmp/gecko-ios/widget/uikit/nsWindow.mm:113:30: error: method parameter type 'NSSet *' does not match super class method parameter type 'NSSet<UITouch *> *' [-Werror,-Wsuper-class-method-mismatch]
0:04.56 113 | - (void)touchesBegan:(NSSet*)touches withEvent:(UIEvent*)event;
0:04.56 | ^
0:04.56 /tmp/gecko/iPhoneOS17.4.sdk/System/Library/Frameworks/UIKit.framework/Headers/UIResponder.h:85:1: note: previous declaration is here
0:04.56 85 | - (void)touchesBegan:(NSSet<UITouch *> *)touches withEvent:(nullable UIEvent *)event;
0:04.56 | ^
0:04.57 /tmp/gecko-ios/widget/uikit/nsWindow.mm:114:34: error: method parameter type 'NSSet *' does not match super class method parameter type 'NSSet<UITouch *> *' [-Werror,-Wsuper-class-method-mismatch]
0:04.57 114 | - (void)touchesCancelled:(NSSet*)touches withEvent:(UIEvent*)event;
0:04.57 | ^
0:04.57 /tmp/gecko/iPhoneOS17.4.sdk/System/Library/Frameworks/UIKit.framework/Headers/UIResponder.h:88:1: note: previous declaration is here
0:04.57 88 | - (void)touchesCancelled:(NSSet<UITouch *> *)touches withEvent:(nullable UIEvent *)event;
0:04.57 | ^
0:04.57 /tmp/gecko-ios/widget/uikit/nsWindow.mm:115:30: error: method parameter type 'NSSet *' does not match super class method parameter type 'NSSet<UITouch *> *' [-Werror,-Wsuper-class-method-mismatch]
0:04.57 115 | - (void)touchesEnded:(NSSet*)touches withEvent:(UIEvent*)event;
0:04.57 | ^
0:04.57 /tmp/gecko/iPhoneOS17.4.sdk/System/Library/Frameworks/UIKit.framework/Headers/UIResponder.h:87:1: note: previous declaration is here
0:04.57 87 | - (void)touchesEnded:(NSSet<UITouch *> *)touches withEvent:(nullable UIEvent *)event;
0:04.57 | ^
0:04.57 /tmp/gecko-ios/widget/uikit/nsWindow.mm:116:30: error: method parameter type 'NSSet *' does not match super class method parameter type 'NSSet<UITouch *> *' [-Werror,-Wsuper-class-method-mismatch]
0:04.58 116 | - (void)touchesMoved:(NSSet*)touches withEvent:(UIEvent*)event;
0:04.58 | ^
0:04.58 /tmp/gecko/iPhoneOS17.4.sdk/System/Library/Frameworks/UIKit.framework/Headers/UIResponder.h:86:1: note: previous declaration is here
0:04.58 86 | - (void)touchesMoved:(NSSet<UITouch *> *)touches withEvent:(nullable UIEvent *)event;
0:04.58 | ^
0:04.58 /tmp/gecko-ios/widget/uikit/nsWindow.mm:262:15: error: receiver type 'void *' is not 'id' or interface pointer, consider casting it to 'id' [-Werror,-Wreceiver-expr]
0:04.58 262 | int id = [value intValue];
0:04.58 | ^~~~~
0:04.58 /tmp/gecko-ios/widget/uikit/nsWindow.mm:275:43: error: cast to 'void *' from smaller integer type 'int' [-Werror,-Wint-to-void-pointer-cast]
0:04.58 275 | CFDictionaryAddValue(mTouches, touch, (void*)mNextTouchID);
0:04.58 | ^~~~~~~~~~~~~~~~~~~
| Assignee | ||
Comment 1•2 years ago
|
||
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/433079b8ed33
Fix warnings related to UITouch. r=nika
Comment 3•2 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox125:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•