Bug 1884022 - Fix warnings related to UITouch. r=nika

Differential Revision: https://phabricator.services.mozilla.com/D203843